resources/css/home.css
html {
    /* background: rgb(240, 231, 209); */
    background: rgb(244, 236, 226);

    color: black;
}

body {
    font-family: 'Roboto Mono', monospace;
}

html:after {
  animation: grain 8s steps(10) infinite;
  background-image: url("../images/home/grain-01.png");

  content: "";
  height: 300%;
  left: -50%;
  opacity: 0.3;
  position: fixed;
  top: -100%;
  width: 300%;
  z-index: -3;
}

@keyframes grain {
  0%, 100% { transform:translate(0, 0) }
  10% { transform:translate(-5%, -10%) }
  20% { transform:translate(-15%, 5%) }
  30% { transform:translate(7%, -25%) }
  40% { transform:translate(-5%, 25%) }
  50% { transform:translate(-15%, 10%) }
  60% { transform:translate(15%, 0%) }
  70% { transform:translate(0%, 15%) }
  80% { transform:translate(3%, 35%) }
  90% { transform:translate(-10%, 10%) }
}

.loader-wrapper {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #252d19;
  display:flex;
  justify-content: center;
  align-items: center;
}

.loader {
  display: inline-block;
  width: 30px;
  height: 30px;
  position: relative;
  /* border: 4px solid #Fff; */
  animation: loader 2s infinite ease;
}

@media screen and (min-width: 601px) {
    .img-container {
      align-content: center;
      text-align: center;
      width: 70vw;
      height: auto;
      margin-top: 25vh;
      margin-bottom: auto;
      margin-left: auto;
      margin-right: auto;
      position: relative;
      background-color: transparent;
  }

  #mac {
    position: relative;
    align-content: center;
    z-index: -1;
    width: 60%;
  }

  .mac-text {
    position: absolute;
    left: 44%;
    top: 22.5%;
    z-index: 0;
    width: 9.5%;
    text-align: left;
    font-size: 0.725vw;
    font-weight: 800;
    color: rgb(73, 73, 73);
    line-height: 150%;
}

  .folder {
    width: 80%;
    height: auto;
  }

  #art-container {
    position: absolute;
    z-index: -1;
    left: 15vw;
    top: 15vh;
    width: 15%;
    transform: rotate(-10deg);

    /* background-color: red; */
    align-content: center;
    text-align: center;

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #art {
    display: inline-block;
    width: 50%;
    margin: 0% auto;
  }

  #art-container:hover {
    transform: rotate(-1090deg);
    z-index: 5;

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #troll-container {
    position: absolute;
    z-index: -1;
    left: 37%;
    top: -33%;
    width: 7%;
  }

  #troll {
    display: inline-block;
    width: 100%;
    margin-top: 60%;
    margin-right: 20%;
    /* transform: rotate(-110deg); */

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #coke-container {
    position: absolute;
    z-index: -2;
    left: 15%;
    top: 27%;
    width: 20%;
  }

  #coke1 {
    display: inline-block;
    width: 20%;
    margin-top: 60%;
    margin-right: 20%;
    transform: rotate(-110deg);

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #coke2 {
    display: inline-block;
    width: 20%;

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #mirror-container {
    position: absolute;
    /* right: 27%;
    top: 30%;
    width: 8%; */
    z-index: 0;
    right: 25.5%;
    top: 6%;
    width: 10%;
  }

  #mirror {
    width: 100%;

    -webkit-transition: 1s;
		transition: transform 1s;
  }

  #me-text {
    position: relative;
    z-index: 0;
    width: 100%;
    margin-bottom: 20px;

    font-size: 0.8vw;
    font-weight: 700;
    /* background-color: white; */
    /* border: 3px solid rgb(255, 225, 236); */
    /* background-color: rgb(202, 248, 250); */
    padding: 10%;
    border-radius: 7px;
    color: rgb(95, 95, 95);

    opacity: 0;

    -webkit-transition: 0.7s;
		transition: opacity 0.7s;
  }

  #phone {
    width: 100%;
    z-index: -1;
  }

  #phone-container {
    position: absolute;
    right: 10%;
    top: 70%;
    width: 15%;
    overflow: hidden;
    z-index: -1;
  }

  #welcome-message {
    position: absolute;
    right: 10%;
    top: 45%;
    width: 8%;
    z-index: -1;
    visibility: hidden;
  }
}

